# tovar-zapolnenie

./: .gitignore  pyproject.toml
tovar_zapolnenie/: workBitrix.py  workFlask.py
tovar_zapolnenie/static/: neon.css  spaceGreen.css  styles copy.css
tovar_zapolnenie/static/js/: index.js
tovar_zapolnenie/templates/: index.html
